@@ -1,3 +1,9 @@
+2012-10-28         Andrew J. Schorr     <aschorr@telemetry-investments.com>
+
+	* messages.awk, fts.awk: Adjusted so make diffout will work.
+	* Makefile.am (messages): Adjust to use standard failure test for
+	make diffout.
+
 2012-10-19         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* symtab1.awk: Adjust to not print ENVIRON and PROCINFO which won't
