@@ -1,3 +1,8 @@
+2012-10-28         Andrew J. Schorr     <aschorr@telemetry-investments.com>
+
+	* Makefile.pc (messages): Adjust to use standard failure test for
+	make diffout.
+
 2012-08-08         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* gawkmisc.pc (os_isreadable): Take IOBUF_PUBLIC instead of fd and
